# residencia_optimizador_equipes_fitec

./: .env.base  .gitignore  LICENSE  Paulo_Hugo_Projeto (3).ipynb  Paulo_Hugo_Projeto (4).ipynb  Paulo_Hugo_Projeto.ipynb  Profissionais.csv  Projetos.csv  Projetos_Requisitos.csv  README.md  pyproject.toml  requirements.in  requirements.txt
api/: app.py
api/contracts/: team_formation.py
api/routes/: __init__.py  team_router.py
core/: utils.py
core/application/: team_formation_service.py
core/data/cvs/: Fabio Arnaldo.md  Jorge Mariz.md  Katilce Delgado.md  Luiz Gustavo Magoga.md  Morgana Leite.md  Rafael Calado.md  Rafael George.md  Rildo Pereira.md  Tarcisio Almeida.md
core/data/data_frame_summary/: colaborators_data.xlsx
core/data/results/: resumo_curriculos.csv  resumo_projeto.md
core/infrastructure/: collaborators_processing.py  markdown.py  team_formation.py
core/infrastructure/gateway/: gemini_model.py
data/cvs/: Alessandre Martins.md  Atahualpa Bastos.md  Carlo Revoredo.md  Diego Oliveira.md  João Ricardo.md  Leonides Neto.md  Leticia Queiroz.md  Marcelo Eihara.md  Tamires Rezende.md  Washington Barbosa.md
data/data_frame_summary/: colaborators_data.xlsx
data/results/: resumo_curriculos.csv  resumo_projeto.md
src/: app.py
src/infra/: collaborators_processing.py  information_extraction_solver.py  markdown.py
src/infra/gateway/: gemini_model.py
